--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
 }
 
 .wrapper {
-  background: linear-gradient(to right, #e67e22, #e74c3c);
+  background: linear-gradient(to right, #22aee6, hsl(234, 96%, 30%));
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -18,7 +18,7 @@ body {
   height: 90vh;
   background: #fff;
   box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
 }
 
@@ -58,7 +58,7 @@ body {
 input[type="text"] {
   background-color: transparent;
   border: 0;
-  border-bottom: solid 1px #f16051;
+  border-bottom: solid 1px #90c0d3;
   width: 30%;
   padding-bottom: 4px;
   color: #fff !important;
@@ -87,9 +87,9 @@ button {
   letter-spacing: 1px;
   font-size: 15px;
   cursor: pointer;
-  background-color: #f16051;
-  color: #fff;
-  font-weight: 100;
+  background-color: #05d0eb;
+  color: rgb(0, 0, 0);
+  font-weight: 500;
 }
 
 button:active {
